WIP: NormalizedNode is not a generic
Rework the NormalizedNode model to split identifier and value,
using overrides rather than generics. This cuts down complexity
quite a bit and makes the interface much more friendly.

This allows us to fix some of the sins in the overall NormalizedNode
hierarchy:

0) Use to generics is minimized:
- NormalizedNode, DataNodeContainer are no longer generic
- other constructs either gained or lost an argument, with losses
  being more prevalent.

1) NormalizedNodeContainer is split into two concepts:
- DistinctNodeContainer, allowing PathArgument lookups
- OrderedNodeContainer, allowing offset-based lookups and implying
  ItemOrder.Ordered

2) MapNode is likewise split into two nodes based on ItemOrder:
- OrderedMapNode, which both DistinctNodeContainer and
  OrderedNodeContainer
- UnorderedMapNode, which is a plain ItemOrder.Unordered
  DistinctNodeContainer

// FIXME: audit line lengths after mass replaces

JIRA: YANGTOOLS-1074
Change-Id: I49c58850f565182826f5a8e1fc5b58cffb4a7d47
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>